# ai-customer-service

./: .gitignore  README.md  pyproject.toml
client/: package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
client/src/api/: index.js
client/src/router/: index.js
client/src/views/: ChatView.vue  HomeView.vue  KnowledgeView.vue
deploy/: docker-compose.yml
server/: .env.example
server/alembic/: env.py
server/alembic/versions/: 700b239f7f68_init_create_base_schema.py
server/app/: config.py  main.py
server/app/api/: deps.py
server/app/api/v1/: router.py
server/app/middleware/: cors.py
server/app/models/: __init__.py  base.py
server/app/utils/: logger.py
